--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,23 +4,34 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
+        android:icon="@mipmap/ic_launcher_dog_foreground"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-        >
-        <activity android:name=".Topperritos"
-            android:parentActivityName=".MainActivity">
+        android:roundIcon="@mipmap/ic_launcher_dog_foreground"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".ActividadesPrincipales.AcercaDe"
+            android:parentActivityName=".ActividadesPrincipales.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActividadesPrincipales.MainActivity" />
+            </activity>
+        <activity
+            android:name=".ActividadesPrincipales.Contacto_Correo"
+            android:parentActivityName=".ActividadesPrincipales.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ActividadesPrincipales.MainActivity" />
+        </activity>
+        <activity
+            android:name=".ActividadesPrincipales.Topperritos"
+            android:parentActivityName=".ActividadesPrincipales.MainActivity">
 
             <!-- soporte para versiones 4 o inferiores -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"
-            ></meta-data>
-
-            </activity>
-        <activity android:name=".MainActivity">
+                android:value=".ActividadesPrincipales.MainActivity" />
+        </activity>
+        <activity android:name=".ActividadesPrincipales.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
